--- a/CpuSmmAlternative/CpuSmmAlternative.vcxproj
+++ b/CpuSmmAlternative/CpuSmmAlternative.vcxproj
@@ -62,11 +62,15 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="main.c" />
-    <ClCompile Include="Smm.c" />
+    <ClCompile Include="Main.c" />
+    <ClCompile Include="Memory\Memory.c" />
+    <ClCompile Include="Firmware\Smm.c" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Smm.h" />
+    <ClInclude Include="Amd64\Msr.h" />
+    <ClInclude Include="Amd64\Page.h" />
+    <ClInclude Include="Memory\Memory.h" />
+    <ClInclude Include="Firmware\Smm.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
